publish: Test change to index.html.md
generated from commit 5c8020ff4a11e663728d21393d09fc5888dc7288

--- a/index.html
+++ b/index.html
@@ -737,7 +737,7 @@
       <div class="content">
         <h1 id="cro-software-api">CRO Software API v1.0.3</h1>
 
-<p>Build on &amp; integrate with CRO Software.</p>
+<p>Build on &amp; use CRO Software.</p>
 
 <p>Base URLs:</p>
 
