publish: chore: Update docs with oas generated index.html.md
generated from commit 20e4ab58f58e2f11af1ade6e1963120b49ff82f6

--- a/index.html
+++ b/index.html
@@ -737,7 +737,7 @@
       <div class="content">
         <h1 id="cro-software-api">CRO Software API v1.0.3</h1>
 
-<p>Build on &amp; use CRO Software.</p>
+<p>Build on &amp; integrate with CRO Software.</p>
 
 <p>Base URLs:</p>
 
@@ -932,8 +932,8 @@ The access token must be passed as an [Authorization: Bearer &lt;token&gt;] head
 <li>Flow: authorizationCode
 
 <ul>
-<li>Authorization URL = <a href="https://auth.crosandbox.com/oauth2/auth">https://auth.crosandbox.com/oauth2/auth</a></li>
-<li>Token URL = <a href="https://auth.crosandbox.com/oauth2/token">https://auth.crosandbox.com/oauth2/token</a></li>
+<li>Authorization URL = <a href="https://idp.crobins.net/oauth2/auth">https://idp.crobins.net/oauth2/auth</a></li>
+<li>Token URL = <a href="https://idp.crobins.net/oauth2/token">https://idp.crobins.net/oauth2/token</a></li>
 </ul></li>
 </ul>
 
@@ -953,7 +953,7 @@ The access token must be passed as an [Authorization: Bearer &lt;token&gt;] head
 <li>Flow: implicit
 
 <ul>
-<li>Authorization URL = <a href="https://auth.crosandbox.com/oauth2/auth">https://auth.crosandbox.com/oauth2/auth</a></li>
+<li>Authorization URL = <a href="https://idp.crobins.net/oauth2/auth">https://idp.crobins.net/oauth2/auth</a></li>
 </ul></li>
 </ul>
 
@@ -973,7 +973,7 @@ The access token must be passed as an [Authorization: Bearer &lt;token&gt;] head
 <li><p>Flow: password</p>
 
 <ul>
-<li>Token URL = <a href="https://auth.crosandbox.com/oauth2/token">https://auth.crosandbox.com/oauth2/token</a></li>
+<li>Token URL = <a href="https://idp.crobins.net/oauth2/token">https://idp.crobins.net/oauth2/token</a></li>
 </ul></li>
 </ul>
 
